# taskflow-AmanJagotra

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: manage.py
backend/core/: filters.py  meta.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/core/management/commands/: seed.py
backend/core/migrations/: 0001_initial.py
backend/greening/: asgi.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
greening_bruno/: Create Project Tasks.yml  Create Project.yml  Create User.yml  Delete Project.yml  Delete Task.yml  Get Project Tasks.yml  List Projects.yml  Login.yml  Project Stats.yml  Retrieve Single Project.yml  Retrieve Single Task.yml  Update Project.yml  Update Task.yml  opencollection.yml
greening_bruno/environments/: Greening.yml
